--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.nci</groupId>
 	<artifactId>agro</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>agro</name>
 	<description>NCI CPP project for Spring Boot Agro</description>
 	<properties>
